--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 		.my-class-3 {background: #fef;}
 		.my-class-4 {background: #ffe;}
 	</style>
+	<script type="text/javascript" src="./compiled.js"></script>
 </head>
-<script type="text/javascript" defer src="compiled.js"></script>
+
 <body>
 	<main id="main"></main>
 	<script type="text/javascript">
