--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body>
 	<main id="main"></main>
+	<ma></map>
+		<ki></ki>
 	<script type="text/javascript">
 		var main = document.getElementById('main')
 		render(main)
